<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="60dp"
    tools:context=".auth.ui.screens.SendEmailChangePasswordScreenFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint_field"
            android:hint="@string/email_hint_field"
            android:inputType="textEmailAddress"
            android:minHeight="52dp"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendEmailToRecoveryPasswordBtn"
        android:layout_marginBottom="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/send_email_to_recovery_password_button"
        android:textColor="@color/white_dark"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/backToLoginBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:iconGravity="textStart"
        android:gravity="center"
        app:iconTint="@color/gray"
        app:icon="@drawable/ic_sharp_arrow_left_alt_24"
        app:iconSize="30dp"
        android:padding="0dp"
        android:textColor="@color/gray"
        android:backgroundTint="@color/transparent"
        android:text="Volver"
        android:textSize="20sp" />

</LinearLayout>