<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.ui.screens.ChangePasswordScreenFragment">

    <LinearLayout
        android:id="@+id/accountInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/accountPicture"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:contentDescription="Picture"
            android:layout_gravity="center_horizontal"
            app:tint="?attr/colorPrimary"
            android:layout_width="170dp"
            android:layout_height="170dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/accountFirstName"
            android:text="Emerzon Javier"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/accountLastName"
            android:text="Kolki Martinez"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/accountRole"
            android:text="Administrador"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/accountInfo"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldLayout"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            android:hint="@string/password_hint_field"
            app:placeholderText="@string/password_hint_field"
            app:placeholderTextColor="@color/gray"
            app:boxStrokeErrorColor="@color/red"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:autofillHints="Contraseña"
                android:hint="@string/password_hint_field"
                android:inputType="textPassword"
                android:minHeight="52dp"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordFieldLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            android:hint="@string/confirm_password_hint_field"
            app:placeholderText="@string/confirm_password_hint_field"
            app:placeholderTextColor="@color/gray"
            app:boxStrokeErrorColor="@color/red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordField"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="Confirmar contraseña"
                android:hint="@string/confirm_password_hint_field"
                app:boxStrokeErrorColor="@color/red"
                android:inputType="textPassword"
                android:minHeight="52dp"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/confirm_btn"
            android:textColor="@color/white_dark"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/backToAccountOptionsBtn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:iconGravity="textStart"
            android:gravity="center"
            app:iconTint="@color/gray"
            app:icon="@drawable/ic_sharp_arrow_left_alt_24"
            app:iconSize="30dp"
            android:padding="0dp"
            android:textColor="@color/gray"
            android:backgroundTint="@color/transparent"
            android:text="@string/back_btn"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>